# pgrep

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  test.toml
.github/workflows/: rust.yml
src/lib/: app.rs  cache.rs  config.rs  error.rs  mod.rs  options.rs  project.rs  query.rs  ui.rs
src/lib/fmt/: csv.rs  html.rs  json.rs  markdown.rs  mod.rs  text.rs  xml.rs
src/lib/formats/: csv.rs  html.rs  json.rs  markdown.rs  mod.rs  text.rs  xml.rs
src/lib/ui/: console.rs  mod.rs  terminal.rs  ui.rs
