[package]
name = "pgrep"
version = "0.1.0"
edition = "2021"
description = "A developer's tool to help filter through projects"

[[bin]]
name = "pgrep"
path = "src/bin/main.rs"

[lib]
name = "pgrep"
path = "src/lib/mod.rs"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.6", features = ['derive', 'cargo', 'env'] }
directories = "5.0.1"
lazy_static = "1.4.0"
log = "0.4.21"
pretty_env_logger = "0.5"
rmp-serde = "1.3.0"
serde = { version = "1.0.203", features = ["derive"] }
strum = { version = "0.26.2", features = ["derive"] }
toml = "0.8.14"
whoami = "1.5.1"
